# Laplace

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
examples/: Butterworth.cpp  CMakeLists.txt  HighPass.cpp  LowPass.cpp  ViewFilter.cpp  ViewFilter.hpp
include/Laplace/: Angle.hpp  Butterworth.hpp  Fft.hpp  Filter.hpp  Frequency.hpp  HighPass.hpp  LowPass.hpp  Rng.hpp
src/: Rng.cpp
tests/: Angle.cpp  CMakeLists.txt  Fft.cpp  Filter.cpp  FindCatch2.cmake  Frequency.cpp  HighPass.cpp  LowPass.cpp  Rng.cpp
tests/install/: CMakeLists.txt  Install.cpp
